--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  margin: ;
+  margin: 0;
   background: linear-gradient(to left, lightblue, lightgreen);
   font-family: "Courier New", Courier, monospace;
 }
